--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -49,7 +49,7 @@ services:
       - 7053:7053
     extra_hosts:
       - "peer0.org2.example.com:72.61.113.7"
-      - "orderer.example.com:172.16.139.239"
+      - "orderer.example.com:178.16.139.239"
     networks:
       - fabric-net
 
@@ -60,13 +60,16 @@ services:
     tty: true
     stdin_open: true
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+    environment:
+      - FABRIC_CFG_PATH=/opt/hyperledger/fabric/configtx
     volumes:
       - ./organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations
       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
       - ./chaincode:/opt/gopath/src/github.com/chaincode
+      - ./configtx:/opt/hyperledger/fabric/configtx
     extra_hosts:
       - "peer0.org2.example.com:72.61.113.7"
-      - "orderer.example.com:172.16.139.239"
+      - "orderer.example.com:178.16.139.239"
     networks:
       - fabric-net
 
