--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -67,6 +67,7 @@ services:
       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
       - ./chaincode:/opt/gopath/src/github.com/chaincode
       - ./configtx:/opt/hyperledger/fabric/configtx
+      - ./organizations:/opt/hyperledger/fabric/organizations  
     extra_hosts:
       - "peer0.org2.example.com:72.61.113.7"
       - "orderer.example.com:178.16.139.239"
