--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -20,6 +20,7 @@ services:
       - ./system-genesis-block/genesis.block:/var/hyperledger/orderer/genesis.block
       - ./organizations/ordererOrganizations/example.com/orderers/orderer.example.com/msp:/var/hyperledger/orderer/msp
       - ./organizations:/opt/hyperledger/fabric/organizations
+      - ./organizations:/etc/hyperledger/organizations
       - ordererdata:/var/hyperledger/production/orderer
     ports:
       - 7050:7050
@@ -46,12 +47,13 @@ services:
       - ./organizations/peerOrganizations/org1.example.com/users:/var/hyperledger/peer/users
       - ./chaincode:/opt/gopath/src/github.com/chaincode
       - ./organizations:/opt/hyperledger/fabric/organizations
+      - ./organizations:/etc/hyperledger/organizations
     ports:
       - 7051:7051
       - 7053:7053
     extra_hosts:
       - "peer0.org2.example.com:72.61.113.7"
-      - "orderer.example.com:178.16.139.239"   # ← FIXED AWS IP
+      - "orderer.example.com:172.16.139.239"
     networks:
       - fabric-net
 
@@ -64,26 +66,27 @@ services:
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
 
     environment:
-      - FABRIC_CFG_PATH=/etc/hyperledger/fabric  # ← peer + core.yaml path
+      - FABRIC_CFG_PATH=/etc/hyperledger/fabric   # peer + core.yaml
 
     volumes:
-      # Peer-related volumes
+      # peer CLI paths
       - ./organizations:/opt/gopath/src/github.com/hyperledger/fabric/peer/organizations
       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
       - ./chaincode:/opt/gopath/src/github.com/chaincode
 
-      # IMPORTANT: For configtxgen (profile loading)
+      # configtxgen profile loader
       - ./configtx:/opt/hyperledger/fabric/configtx
 
-      # IMPORTANT: For peer (core.yaml) + configtx.yaml
+      # core.yaml + configtx.yaml for peer & configtxgen
       - ./configtx/configtx.yaml:/etc/hyperledger/fabric/configtx.yaml
 
-      # TLS paths fix
+      # TLS & MSP load path for configtxgen (MUST FIXED)
       - ./organizations:/opt/hyperledger/fabric/organizations
+      - ./organizations:/etc/hyperledger/organizations
 
     extra_hosts:
       - "peer0.org2.example.com:72.61.113.7"
-      - "orderer.example.com:178.16.139.239"   # ← FIXED
+      - "orderer.example.com:172.16.139.239"
 
     networks:
       - fabric-net
